# tg-sticker-maker-bot

./: .gitignore  Cargo.toml
src/: main.rs
