[package]
name = "tg-sticker-helper-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.20", features = ["rt-multi-thread", "macros"] }
image = "0.24"
anyhow = "1"
webp = "0.2"
bytes = "1"
